temporary(?) fix for developer preview 5
Preview 5 of Yosemite appears to have changed the behavior of position:
fixed in WebView instances. At least in the context of Textual, the
WebView is now drawn as a layer backed view even though its never
explicitly defined as one neither is its host window.

As part of this, fonts do not look correct on position: fixed views
such as the topic. This fixes that.

Hopefully next developer preview will revert the layer backing.

--- a/Resources/Styles/Styles/Astria/design.css
+++ b/Resources/Styles/Styles/Astria/design.css
@@ -117,6 +117,7 @@ a:hover {
 	border-bottom: 1px solid #1f1f1f;
 	-webkit-box-shadow: 0 1px 5px #777;
 	-webkit-transition: opacity 0.8s linear;
+	-webkit-font-smoothing: subpixel-antialiased;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
