--- a/Resources/Styles/Styles/Tomorrow Night (Eighties)/design.css
+++ b/Resources/Styles/Styles/Tomorrow Night (Eighties)/design.css
@@ -130,6 +130,7 @@ a:hover {
 	padding: 2px 0.5em 3px;
 	background-color: rgba(113, 140, 00, 0.9); /* Tomorrow: Green 90% */
 	-webkit-transition: opacity 0.8s linear;
+	-webkit-font-smoothing: subpixel-antialiased;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
